--- a/index.html
+++ b/index.html
@@ -1,96 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>HabitIt • Golden Age Hub</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
-  <style>
-    :root {
-      --bg: #0d1117;
-      --bg-card: #161b22;
-      --fg: #e6edf3;
-      --accent: #3b82f6;
-      --muted: #9ca3af;
-    }
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
+  <title>HabitIt • Upgrade Hub</title>
 
-    * { box-sizing: border-box; }
+  <!-- Favicon & Social Preview -->
+  <link rel="icon" href="favicon.svg" type="image/svg+xml"/>
+  <meta name="description" content="Choose your upgrade path: daily habits or the Golden‑Age roadmap."/>
+  <meta property="og:title" content="HabitIt – Self‑Upgrade Hub"/>
+  <meta property="og:description" content="Two blueprints, one mission: level‑up your present and forge the future."/>
+  <meta property="og:image" content="https://your‑domain.com/og-card.png"/>
+  <meta property="og:type" content="website"/>
 
-    body {
-      margin: 0;
-      padding: 0;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      min-height: 100vh;
-      font-family: 'Inter', system-ui, sans-serif;
-      background: var(--bg);
-      color: var(--fg);
-    }
-
-    .container {
-      text-align: center;
-      padding: 3rem 2rem;
-      max-width: 640px;
-    }
-
-    h1 {
-      font-size: 2.75rem;
-      font-weight: 800;
-      margin-bottom: 0.5rem;
-      color: var(--accent);
-    }
-
-    p.tagline {
-      font-size: 1.1rem;
-      color: var(--muted);
-      margin-bottom: 3rem;
-    }
-
-    .cards {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 1.5rem;
-    }
-
-    .card {
-      background: var(--bg-card);
-      border: 1px solid #21262d;
-      border-radius: 1rem;
-      padding: 2rem 1.5rem;
-      transition: transform 0.25s ease, box-shadow 0.25s ease;
-      cursor: pointer;
-      text-decoration: none;
-      color: inherit;
-    }
-
-    .card:hover {
-      transform: translateY(-6px);
-      box-shadow: 0 10px 20px rgba(0,0,0,0.2);
-    }
-
-    .card h2 {
-      margin: 0 0 0.75rem 0;
-      font-size: 1.5rem;
-      font-weight: 600;
-      color: var(--fg);
-    }
-
-    .card p {
-      margin: 0;
-      font-size: 0.95rem;
-      color: var(--muted);
-      line-height: 1.5;
-    }
-
-    footer {
-      margin-top: 4rem;
-      font-size: 0.85rem;
-      color: var(--muted);
-    }
-  </style>
+  <link rel="preload" href="https://fonts.gstatic.com/s/inter/v12/UcCO3Ewr7B47sPUwEG3L.woff2" as="font" crossorigin>
+  <link rel="stylesheet" href="assets/style.css"/>
 </head>
 <body>
   <div class="container">
@@ -98,24 +22,17 @@
     <p class="tagline">Two blueprints, one mission: level‑up your present and forge the future.</p>
 
     <div class="cards">
-      <a href="good-habits.html" class="card">
-        <h2>Good Habits<br>Playbook</h2>
-        <p>Daily routines engineered for health, focus, and long‑term compounding gains.</p>
-      </a>
+      <a href="good-habits.html" class="card"><h2>Good Habits<br/>Playbook</h2>
+        <p>Daily routines engineered for health, focus, and long‑term compounding gains.</p></a>
 
-      <a href="golden-age.html" class="card">
-        <h2>Golden Age<br>Manifesto</h2>
-        <p>Strategic roadmap to build, ship, and collaborate toward a tech‑driven renaissance.</p>
-      </a>
+      <a href="golden-age.html" class="card"><h2>Golden Age<br/>Manifesto</h2>
+        <p>Strategic roadmap to build, ship, and collaborate toward a tech‑driven renaissance.</p></a>
     </div>
 
-    <footer>
-      © <span id="year"></span> HabitIt. Built for relentless self‑optimizers.
-    </footer>
+    <footer>© <span id="year"></span> HabitIt. Built for relentless self‑optimizers.</footer>
   </div>
 
   <script>
-    // auto‑update footer year
     document.getElementById('year').textContent = new Date().getFullYear();
   </script>
 </body>
