--- a/golden-age.html
+++ b/golden-age.html
@@ -14,6 +14,8 @@
   <link rel="stylesheet" href="assets/style.css"/>
 </head>
 <body>
+    <button id="theme-toggle" class="theme-toggle" aria-label="Toggle dark / light">🌙</button>
+
   <h1>Forge&nbsp;Your&nbsp;Golden&nbsp;Age</h1>
   <blockquote>
     Nobody’s mailing you a “golden age” starter kit. Monarchs are museum pieces, Marx is a paperback, and the sandbox runs on silicon. Act accordingly.
