--- a/good-habits.html
+++ b/good-habits.html
@@ -14,6 +14,8 @@
   <link rel="stylesheet" href="assets/style.css"/>
 </head>
 <body data-page="good-habits">
+    <button id="theme-toggle" class="theme-toggle" aria-label="Toggle dark / light">🌙</button>
+
   <h1>HabitIt</h1>
   <p class="motivational-quote">“The secret of your future is hidden in your daily routine.” — Mike Murdock</p>
   <p class="introduction">Welcome to HabitIt, your personal guide to building life‑changing habits. Below, you’ll find a curated list of habits to boost your health, productivity, and well‑being. Click each one to discover why it matters, how to track it, and what’s at stake if you skip it. Small steps, big wins—start today!</p>
