--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
 </head>
 
 <body>
+    <button id="theme-toggle" class="theme-toggle" aria-label="Toggle dark / light">🌙</button>
+
     <div class="container">
         <h1>Choose Your Upgrade Path</h1>
         <p class="tagline">Two blueprints, one mission: level‑up your present and forge the future.</p>
