--- a/golden-age.html
+++ b/golden-age.html
@@ -9,8 +9,9 @@
   <meta name="description" content="Action‑oriented roadmap to build and ship your personal golden age."/>
   <meta property="og:title" content="Golden Age Manifesto"/>
   <meta property="og:description" content="Less kumbaya, more commits – forge the 21st‑century renaissance."/>
-  <meta property="og:image" content="https://your‑domain.com/og-golden.png"/>
-
+  <meta property="og:image" content="https://summeroff.github.io/habitit/og-card.png" />
+  
+  <link rel="stylesheet" href="https://fonts.bunny.net/css?family=Inter:400,600,800">
   <link rel="stylesheet" href="assets/style.css"/>
 </head>
 <body>
