--- a/good-habits.html
+++ b/good-habits.html
@@ -9,8 +9,9 @@
   <meta name="description" content="Interactive list of life‑changing habits with tracking tips and daily focus."/>
   <meta property="og:title" content="Good Habits Playbook"/>
   <meta property="og:description" content="Build compounding routines for health and productivity."/>
-  <meta property="og:image" content="https://your‑domain.com/og-habits.png"/>
+  <meta property="og:image" content="https://summeroff.github.io/habitit/og-card.png" />
 
+<link rel="stylesheet" href="https://fonts.bunny.net/css?family=Inter:400,600,800">
   <link rel="stylesheet" href="assets/style.css"/>
 </head>
 <body data-page="good-habits">
