--- a/index.html
+++ b/index.html
@@ -15,9 +15,7 @@
     <meta property="og:image" content="https://summeroff.github.io/habitit/og-card.png" />
     <meta property="og:type" content="website" />
 
-    <link rel="preload" href="https://fonts.gstatic.com/s/inter/v12/UcCO3Ewr7B47sPUwEG3L.woff2" as="font" crossorigin>
-    <link rel="stylesheet" href="https://fonts.bunny.net/css?family=Inter:wght@400;600;800&display=swap">
-
+    <link rel="stylesheet" href="https://fonts.bunny.net/css?family=Inter:400,600,800">
     <link rel="stylesheet" href="assets/style.css" />
 </head>
 
