--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
     <script>
         document.getElementById('year').textContent = new Date().getFullYear();
     </script>
+    
+    <script type="module" src="assets/main.js"></script>
 </body>
 
 </html>
