add some text to golden age to set context

--- a/golden-age.html
+++ b/golden-age.html
@@ -20,6 +20,28 @@
 
   <div class="container">
     <h1>Forge Your Golden Age</h1>
+
+    <!-- Introductory Motivation -->
+    <section class="intro-text">
+      <p>Forget waiting for someone else to drop a golden age in your lap. That’s not how it works anymore. This is the era of AI, robots, and a planet buzzing with 8 billion people. You’ve got tools and connections past generations couldn’t even dream of, so why just sit there?</p>
+      <p>You’re not drifting through life like evolution, fumbling blindly. You’re steering with purpose, and AI is your compass to navigate the future. The world’s messy, sure, but you’ve got the tech to cut through the noise and the global crew to amplify your moves. Your golden age? It’s not a gift, it’s something you build, starting right now.</p>
+      <p><strong>How to Kick It Off:</strong></p>
+      <ul>
+        <li><strong>Claim Your Craft:</strong> Pick what you’re obsessed with—music, art, tech—whatever sets your soul on fire. Name it. Own it.</li>
+        <li><strong>Move Today:</strong> Set one tiny, doable goal. Write a riff, tweak a line of code, sketch something raw—do it before the day’s done.</li>
+        <li><strong>Tap AI:</strong> Use it like a superpower. Ask it for ideas, dig into tutorials, or let it spark something fresh. It’s your guide, not just a gadget.</li>
+        <li><strong>Link Up:</strong> Find one person, online or IRL, who vibes with your vision. Start a chat, swap ideas, or collab on something small.</li>
+        <li><strong>Keep Momentum:</strong> Check in weekly. What worked? What’s next? Stack those wins.</li>
+      </ul>
+      <p><em>Your Game Plan:</em><br>
+         <strong>Today:</strong> Lock in your craft and nail that first micro-goal.<br>
+         <strong>This Week:</strong> Lean on AI to push your skills or solve a snag.<br>
+         <strong>This Month:</strong> Connect with someone who gets it and start something together.
+      </p>
+      <p><strong>Why This Hits Different:</strong> Actionable steps, a clear north star, and endless possibilities for epic partnerships.</p>
+      <p><em>This idea that a politician is going to hand you a golden age is so boomer coded. The golden age starts with you. Perfect your craft. Become the golden age.</em></p>
+    </section>
+
     <blockquote>
       Nobody’s mailing you a “golden age” starter kit. Monarchs are museum pieces, Marx is a paperback, and the sandbox runs on silicon. Act accordingly.
     </blockquote>
@@ -29,100 +51,57 @@
 
       <div class="card">
         <h2>1. Audit Your Stack</h2>
-        <p>
-          Inventory your skills, tools, and weak spots like you’re pen-testing your own life.
-        </p>
-        <button class="ai-btn"
-                data-prompt="Produce a self-audit checklist covering skill gaps, tooling inefficiencies, and personal bottlenecks; output as a table with priority scores.">
-          AI Assist
-        </button>
+        <p>Inventory your skills, tools, and weak spots like you’re pen-testing your own life.</p>
+        <button class="ai-btn" data-prompt="Produce a self-audit checklist covering skill gaps, tooling inefficiencies, and personal bottlenecks; output as a table with priority scores.">AI Assist</button>
         <p><em>Why:</em> Blind spots kill momentum; clarity is free performance.</p>
       </div>
 
       <div class="card">
         <h2>2. Jack In</h2>
-        <p>
-          Pair every craft you care about with an AI sidekick.<br>
-          • Code → <code>Copilot</code><br>
-          • Design → Diffusion models<br>
-          • Research → LLM chains
-        </p>
-        <button class="ai-btn"
-                data-prompt="List top AI copilots for code, design, and research; then generate a three-step integration plan for each into my daily workflow.">
-          AI Assist
-        </button>
+        <p>Pair every craft you care about with an AI sidekick.<br>• Code → <code>Copilot</code><br>• Design → Diffusion models<br>• Research → LLM chains</p>
+        <button class="ai-btn" data-prompt="List top AI copilots for code, design, and research; then generate a three-step integration plan for each into my daily workflow.">AI Assist</button>
         <p><em>Why:</em> Exponential leverage beats linear grind.</p>
       </div>
 
       <div class="card">
         <h2>3. Ship Micro-Golden Moments Weekly</h2>
-        <p>
-          Publish, launch, or demo <em>something</em> every 7 days—blog post, library, beat, meme, hardware hack.
-        </p>
-        <button class="ai-btn"
-                data-prompt="Create a 7-day shipping sprint template: idea capture, MVP scope, launch checklist, and Friday retro questions.">
-          AI Assist
-        </button>
+        <p>Publish, launch, or demo <em>something</em> every 7 days—blog post, library, beat, meme, hardware hack.</p>
+        <button class="ai-btn" data-prompt="Create a 7-day shipping sprint template: idea capture, MVP scope, launch checklist, and Friday retro questions.">AI Assist</button>
         <p><em>Why:</em> Rapid iteration creates compound credibility and feedback loops.</p>
       </div>
 
       <div class="card">
         <h2>4. Build Your Guild</h2>
-        <p>
-          Curate a five-person mastermind + a wider signal group (Discord, local hackerspace, etc.). Build in public.
-        </p>
-        <button class="ai-btn"
-                data-prompt="Draft a checklist for forming a 5-person mastermind: vetting criteria, first-meeting agenda, and recurring cadence.">
-          AI Assist
-        </button>
+        <p>Curate a five-person mastermind + a wider signal group (Discord, local hackerspace, etc.). Build in public.</p>
+        <button class="ai-btn" data-prompt="Draft a checklist for forming a 5-person mastermind: vetting criteria, first-meeting agenda, and recurring cadence.">AI Assist</button>
         <p><em>Why:</em> Lone-wolf romance is dead; network effects are obligatory.</p>
       </div>
 
       <div class="card">
         <h2>5. Automate Trash Work</h2>
-        <p>
-          Cron jobs, GitHub Actions, home-assistant bots—if it’s boring, script it.
-        </p>
-        <button class="ai-btn"
-                data-prompt="Give me the top 10 low-hanging automation targets in a software engineer’s life, with suggested tools and first steps.">
-          AI Assist
-        </button>
+        <p>Cron jobs, GitHub Actions, home-assistant bots—if it’s boring, script it.</p>
+        <button class="ai-btn" data-prompt="Give me the top 10 low-hanging automation targets in a software engineer’s life, with suggested tools and first steps.">AI Assist</button>
         <p><em>Why:</em> You need calendar space for creation, not clerical penance.</p>
       </div>
 
       <div class="card">
         <h2>6. Seek Positive-Sum Arenas</h2>
-        <p>
-          Join ecosystems where one person’s win levels everybody up (open-source, DAOs, maker labs).
-        </p>
-        <button class="ai-btn"
-                data-prompt="Propose three positive-sum communities (online/offline) aligned with open-source, DAOs, or maker culture, plus a 30-day engagement plan.">
-          AI Assist
-        </button>
+        <p>Join ecosystems where one person’s win levels everybody up (open-source, DAOs, maker labs).</p>
+        <button class="ai-btn" data-prompt="Propose three positive-sum communities (online/offline) aligned with open-source, DAOs, or maker culture, plus a 30-day engagement plan.">AI Assist</button>
         <p><em>Why:</em> Faster cross-pollination, fewer zero-sum knife fights.</p>
       </div>
 
       <div class="card">
         <h2>7. Invest in Bio-Uptime</h2>
-        <p>
-          Sleep, lift, zone-2 cardio, micronutrients—yes, the meat-sack matters.
-        </p>
-        <button class="ai-btn"
-                data-prompt="Generate a weekly bio-uptime tracker covering sleep, lifting, zone-2 cardio, micronutrient intake, and recovery markers.">
-          AI Assist
-        </button>
+        <p>Sleep, lift, zone-2 cardio, micronutrients—yes, the meat-sack matters.</p>
+        <button class="ai-btn" data-prompt="Generate a weekly bio-uptime tracker covering sleep, lifting, zone-2 cardio, micronutrient intake, and recovery markers.">AI Assist</button>
         <p><em>Why:</em> Latent potential is worthless if you’re fried.</p>
       </div>
 
       <div class="card">
         <h2>8. Broadcast &amp; Iterate</h2>
-        <p>
-          Share progress brutally honestly; solicit critique; pivot fast.
-        </p>
-        <button class="ai-btn"
-                data-prompt="Compose a public-update template with KPI snapshot, blockers, asks, and next-step pivot logic for rapid iteration.">
-          AI Assist
-        </button>
+        <p>Share progress brutally honestly; solicit critique; pivot fast.</p>
+        <button class="ai-btn" data-prompt="Compose a public-update template with KPI snapshot, blockers, asks, and next-step pivot logic for rapid iteration.">AI Assist</button>
         <p><em>Why:</em> Feedback &gt; ego. Course-correct before you ossify.</p>
       </div>
 
